[metadata]
name = cee-formatter
author = Krzysztof Urbaniak
author-email = krzysztof@urbaniak.co
summary = CEE logging module formatter
home-page = https://github.com/urbaniak/cee-formatter
license = BSD
classifier =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    cee_formatter

[wheel]
universal = 1

[tool:pytest]
isort_ignore =
    build/*

flake8-max-line-length = 119
flake8-ignore =
    build/* ALL

python_files=test_*.py

addopts = --flake8 --isort

[isort]
line_length=119
multi_line_output=3
